fix(layout): footer and layout problem

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,8 @@
 @import "pages/home";
 
 html, body {
-  min-height: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 body {
