--- a/scss/pages/_404.scss
+++ b/scss/pages/_404.scss
@@ -1,7 +1,10 @@
 #page-404{
+    min-height: 100%;
+    display: flex !important;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-	align-content: center;
-    height: 55vh;
 }
 
 #page-404 p{
